--- a/CrudEMnet/CrudEMnet.csproj
+++ b/CrudEMnet/CrudEMnet.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="System.Buffers" Version="4.6.1" />
     <PackageReference Include="System.Memory" Version="4.6.3" />
+    <PackageReference Include="System.Windows.Extensions" Version="9.0.8" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
 </Project>
